<resources>
    <string name="app_name">kotlin-calculator</string>
    <string name="dot">"."</string>
    <string name="add">"+"</string>
    <string name="minus">"-"</string>
    <string name="multiplication">"×"</string>
    <string name="devide">"÷"</string>
    <string name="equal">"="</string>
    <string name="left_parenthesis">"("</string>
    <string name="right_parenthesis">")"</string>
    <string name="clear">"C"</string>
    <string name="delete">"←"</string>
    <string name="zero">"0"</string>
    <string name="one">"1"</string>
    <string name="two">"2"</string>
    <string name="there">"3"</string>
    <string name="four">"4"</string>
    <string name="five">"5"</string>
    <string name="six">"6"</string>
    <string name="seven">"7"</string>
    <string name="eight">"8"</string>
    <string name="nine">"9"</string>
</resources>