<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculator_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:gravity="bottom|end"
        android:textColor="#919090"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/calculator_formula"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/calculator_formula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:gravity="bottom|end"
        android:textColor="#000000"
        android:textSize="@dimen/string_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calculator_result"
        />
    <TextView
        android:id="@+id/calculator_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@null"
        android:gravity="bottom|end"
        android:text="@string/zero"
        android:textColor="#000000"
        android:textSize="@dimen/string_size"
       app:layout_constraintBottom_toTopOf="@+id/devide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <!--分割线-->
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="#000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/calculator_result"
        app:layout_constraintBottom_toTopOf="@+id/devide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--第一排-->
    <TextView
        android:id="@+id/equal"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/equal"
        android:textSize="@dimen/string_size"
        android:textColor="@color/orange"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@+id/add"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/left_parenthesis"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/left_parenthesis"
        android:textColor="@color/orange"
        android:textSize="@dimen/string_size"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onClick"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv0"
        app:layout_constraintRight_toLeftOf="@id/right_parenthesis" />
    <TextView
        android:id="@+id/right_parenthesis"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/right_parenthesis"
        android:textColor="@color/orange"
        android:textSize="@dimen/string_size"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onClick"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/left_parenthesis"
        app:layout_constraintRight_toLeftOf="@id/equal" />
    <TextView
        android:id="@+id/tv0"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/string_size"
        android:textColor="#000000"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/tv1" />


    <!--第二排-->
    <TextView
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/add"
        android:textSize="@dimen/string_size"
        android:textColor="@color/orange"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/equal"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv3"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:gravity="center"
        android:text="@string/there"
        android:textSize="@dimen/string_size"
        android:textColor="#000000"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/left_parenthesis"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv2"
        app:layout_constraintRight_toLeftOf="@id/add" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:gravity="center"
        android:text="@string/two"
        android:textSize="@dimen/string_size"
        android:textColor="#000000"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/left_parenthesis"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv1"
        app:layout_constraintRight_toLeftOf="@id/tv3" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/one"
        android:textSize="@dimen/string_size"
        android:textColor="#000000"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv2" />

    <!--第三排-->
    <TextView
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/minus"
        android:textSize="@dimen/string_size"
        android:textColor="@color/orange"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/add"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv6"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:gravity="center"
        android:text="@string/six"
        android:textSize="@dimen/string_size"
        android:textColor="#000000"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv5"
        app:layout_constraintRight_toLeftOf="@id/minus" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:gravity="center"
        android:text="@string/five"
        android:textSize="@dimen/string_size"
        android:textColor="#000000"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv4"
        app:layout_constraintRight_toLeftOf="@id/tv6" />

    <!--第三排-->
    <TextView
        android:id="@+id/tv4"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/four"
        android:textColor="#000000"
        android:textSize="@dimen/string_size"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv5" />

    <TextView
        android:id="@+id/multiplication"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/multiplication"
        android:textSize="@dimen/string_size"
        android:textColor="@color/orange"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv9"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv9"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:gravity="center"
        android:text="@string/nine"
        android:textSize="@dimen/string_size"
        android:textColor="#000000"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv8"
        app:layout_constraintRight_toLeftOf="@id/multiplication" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:gravity="center"
        android:text="@string/eight"
        android:textSize="@dimen/string_size"
        android:textColor="#000000"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv7"
        app:layout_constraintRight_toLeftOf="@id/tv9" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/seven"
        android:textSize="@dimen/string_size"
        android:textColor="#000000"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv4"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv8" />

    <!--第五排-->
    <TextView
        android:id="@+id/devide"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/devide"
        android:textSize="@dimen/string_size"
        android:textColor="@color/orange"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/multiplication"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/dot"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/dot"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:gravity="center"
        android:text="@string/dot"
        android:textSize="@dimen/string_size"
        android:textColor="@color/orange"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/delete"
        app:layout_constraintRight_toLeftOf="@id/devide" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:gravity="center"
        android:text="@string/delete"
        android:textSize="@dimen/string_size"
        android:textColor="@color/orange"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv8"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/clear"
        app:layout_constraintRight_toLeftOf="@id/dot" />

    <TextView
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="@dimen/string_textview_height"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/clear"
        android:textSize="@dimen/string_size"
        android:textColor="@color/orange"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/tv7"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/delete" />


</androidx.constraintlayout.widget.ConstraintLayout>